Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97586

Setting delegate dynamically before model is set breaks Repeater3D

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • None
    • 6.2.0
    • Quick: 3D
    • None
    • c7431f3df087fe4c45a2db51c4fe0846a745d03e f239b851bf1e5e4394da175189f63ba1f7323d44

      If either delegate or model is set declaratively, things work as expected, but if neither is initially set and delegate is then set dynamically at runtime before the model, Repeater3D breaks.

      See the attached app for example test case.

      This causes rendering issue in Qt Design Studio: QDS-5235

      Similar issue with 2D repeaters: QTBUG-97583

        1. RepeaterTestApp3D.zip
          3 kB
          Miikka Heikkinen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            anmaatta Antti Määttä
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes