Call repeater3d model componentComplete when setting delegate

Fix repeater not working if initialized dynamically. The QQmlDelegateModel
doesn't get its componentComplete called when the delegate is set before
the model so add the call in the setDelegate.

Task-number: QTBUG-97586
Pick-to: 6.2
Change-Id: I0136c6eaa90a57642ff1ea61499b0e977e3eb9eb
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>